kubernetes/network/lan-dns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lan-dns
  namespace: lan-dns
spec:
  replicas: 2
  selector:
    matchLabels: &id001
      app.kubernetes.io/name: lan-dns
  template:
    metadata:
      labels: *id001
    spec:
      serviceAccountName: lan-dns
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels: *id001
      containers:
      - name: dns
        image: ghcr.io/k8s-gateway/k8s_gateway@sha256:e7d334bc486fc78e2f2366da2029b7308240d500330e85d2367d4d9cc46a5e52
        args:
        - -conf
        - /etc/coredns/Corefile
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        ports:
        - name: dns-udp
          containerPort: 5353
          protocol: UDP
        - name: dns-tcp
          containerPort: 5353
          protocol: TCP
        - name: health
          containerPort: 8080
        - name: ready
          containerPort: 8181
        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 128Mi
        volumeMounts:
        - name: config
          mountPath: /etc/coredns
          readOnly: true
        livenessProbe:
          httpGet:
            path: /health
            port: health
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: ready
          initialDelaySeconds: 3
      volumes:
      - name: config
        configMap:
          name: lan-dns
