kubernetes/network/lan-dns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lan-dns
  namespace: lan-dns
  annotations:
    lbipam.cilium.io/ips: 192.168.0.247
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: lan-dns
  ports:
  - name: dns-udp
    port: 53
    targetPort: dns-udp
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: dns-tcp
    protocol: TCP
