kubernetes/network/lan-dns/apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: lan-dns-apiserver
  namespace: lan-dns
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lan-dns
  egress:
  - toEntities: [kube-apiserver]
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
      - port: '6443'
        protocol: TCP
