kubernetes/network/lan-dns/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lan-dns
  namespace: lan-dns
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: lan-dns
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/24
    ports:
    - port: 5353
      protocol: UDP
    - port: 5353
      protocol: TCP
  egress:
  - to:
    - ipBlock:
        cidr: 9.9.9.9/32
    - ipBlock:
        cidr: 149.112.112.112/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
